--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,14 @@ bin/
 .vscode/
 
 ### Mac OS ###
-.DS_Store
+.DS_Store### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+.gradle
+build
+
