--- a/jsp/CloneCyworld/WebContent/WEB-INF/web.xml
+++ b/jsp/CloneCyworld/WebContent/WEB-INF/web.xml
@@ -21,19 +21,43 @@
 		<url-pattern>/RegisterServlet</url-pattern>
 	</servlet-mapping>
 	<servlet>
-		<servlet-name>idCheckServlet</servlet-name>
-		<servlet-class>controller.idCheckServlet</servlet-class>
+		<servlet-name>IdCheckServlet</servlet-name>
+		<servlet-class>controller.IdCheckServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>idCheckServlet</servlet-name>
-		<url-pattern>/idCheckServlet</url-pattern>
+		<servlet-name>IdCheckServlet</servlet-name>
+		<url-pattern>/IdCheckServlet</url-pattern>
 	</servlet-mapping>
 	<servlet>
-		<servlet-name>loginServlet</servlet-name>
-		<servlet-class>controller.loginServlet</servlet-class>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>controller.LoginServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>loginServlet</servlet-name>
-		<url-pattern>/loginServlet</url-pattern>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/LoginServlet</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>LogoutServlet</servlet-name>
+		<servlet-class>controller.LogoutServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LogoutServlet</servlet-name>
+		<url-pattern>/LogoutServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>GuestBookServlet</servlet-name>
+		<servlet-class>controller.GuestBookServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GuestBookServlet</servlet-name>
+		<url-pattern>/GuestBookServlet</url-pattern>
+	</servlet-mapping>
+	<!-- <filter>
+		<filter-name>AuthFilter</filter-name>
+		<filter-class>filter.AuthFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AuthFilter</filter-name>
+		<url-pattern>/home.jsp</url-pattern>
+	</filter-mapping> -->
 </web-app>
